[project]
name = "realzilla_client"
version = "0.1.0"
description = "RealZilla client SDK"
authors = [
    { name = "Benoit Simon", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "mypy"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

# Auto-discover packages under src/
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# If you ship data files INSIDE the package, list them here.
# Replace "realzilla" with your actual top-level package folder under src/
[tool.setuptools.package-data]
realzilla = ["py.typed", "data/*.json", "templates/**/*.html"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["src"]
disable_error_code = ["import-untyped"]